# rust-samtools

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: errors.rs  main.rs
src/cmd/: mod.rs
src/cmd/faidx/: index.rs  mod.rs
src/io/: mod.rs
src/io/common/: mod.rs
src/io/fai/: indexer.rs  mod.rs  reader.rs  writer.rs
src/io/fasta/: mod.rs
src/io/fasta/reader/: fai.rs  mod.rs
src/io/fastq/: mod.rs
src/io/fastq/reader/: fai.rs
