[package]
name = "rust-samtools"
version = "0.1.0"
authors = ["Mimi Wang <mimikwang@gmail.com>"]
description = "Rust implementation of samtools"
edition = "2021"
repository = "https://github.com/mimikwang/rust-samtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
