[package]
name = "rust-samtools"
version = "0.1.0"
authors = ["Mimi Wang <mimikwang@gmail.com>"]
description = "Rust implementation of samtools"
edition = "2021"
repository = "https://github.com/mimikwang/rust-samtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
csv = "1.1"
serde = { version = "1", features = ["derive"] }